syntax = "proto3";

package cruise;

// The cruise service definition.
service Cruise {
  rpc CreateContainer (CreateContainerRequest) returns (CreateContainerResponse) {}
  rpc StartContainer (StartContainerRequest) returns (StartContainerResponse) {}
  rpc GetContainer (GetContainerRequest) returns (GetContainerResponse) {}
  rpc ListContainers (ListContainersRequest) returns (ListContainersResponse) {}
}

message CreateContainerRequest {
  string name = 1;
  string rootfs_path = 2;
  string command = 3;
  repeated string args = 4;
}

message CreateContainerResponse {
  string container_id = 1;
}

message StartContainerRequest {
  string container_id = 1;
}

message StartContainerResponse {
  bool success = 1;
}

message GetContainerRequest {
  string container_id = 1;
}

message GetContainerResponse {
  string id = 1;
  string name = 2;
  string status = 3;
  int32 exit_code = 4;
  string created_at = 5;
}

message ListContainersRequest {
}

message ListContainersResponse {
  repeated GetContainerResponse containers = 1;
}
